--- a/profil/index.html
+++ b/profil/index.html
@@ -4,85 +4,142 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Profil Elektryka</title>
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
 <style>
 body {
   margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f4f6f8;
+  font-family: Arial, sans-serif;
+  background: #f4f6f8;
   color: #333;
 }
 
-/* HERO */
+/* HEADER */
 header {
-  background: linear-gradient(135deg, #1f2933, #111827);
+  background: #111827;
   color: #fff;
   text-align: center;
-  padding: 80px 20px;
-}
-header h1 {
-  font-size: 2.6rem;
-  margin-bottom: 10px;
-}
-header p {
-  font-size: 1.2rem;
-  max-width: 700px;
-  margin: 0 auto 30px;
-  opacity: 0.9;
-}
-header a {
-  display: inline-block;
-  padding: 14px 28px;
-  background: #f59e0b;
-  color: #000;
-  text-decoration: none;
-  font-weight: 700;
-  border-radius: 8px;
-  transition: background 0.3s;
-}
-header a:hover {
-  background: #d97706;
+  padding: 50px 20px;
 }
 
-/* O MNIE */
+header h1 {
+  margin-bottom: 10px;
+}
+
+header input {
+  padding: 12px;
+  width: 280px;
+  max-width: 90%;
+  border-radius: 8px;
+  border: none;
+  font-size: 16px;
+}
+
+/* PROFIL */
 section {
   max-width: 900px;
-  margin: 60px auto;
+  margin: 40px auto;
   background: #fff;
   padding: 40px;
   border-radius: 12px;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+  box-shadow: 0 10px 25px rgba(0,0,0,0.1);
 }
-section h2 {
-  margin-top: 0;
-  font-size: 2rem;
-  margin-bottom: 20px;
+
+.hidden {
+  display: none;
 }
-section p {
-  font-size: 1.05rem;
-  line-height: 1.7;
+
+.badge {
+  display: inline-block;
+  padding: 6px 14px;
+  background: #16a34a;
+  color: #fff;
+  border-radius: 20px;
+  font-size: 14px;
+  margin-top: 10px;
 }
 </style>
 </head>
+
 <body>
 
 <header>
-  <h1>Jan Kowalski – Elektryk z Doświadczeniem</h1>
-  <p>Profesjonalne usługi elektryczne – instalacje, naprawy, pomiary i serwis</p>
-  <a href="#o-mnie">Zamów serwis</a>
+  <h1>Wyszukaj elektryka</h1>
+  <input
+    type="text"
+    id="search"
+    placeholder="Wpisz imię lub nazwisko..."
+  >
 </header>
 
-<section id="o-mnie">
-  <h2>O mnie</h2>
-  <p>
-    Cześć! Nazywam się Jan Kowalski – jestem elektrykiem z ponad 10-letnim doświadczeniem
-    w instalacjach elektrycznych, naprawach oraz pomiarach. Posiadam wszystkie niezbędne
-    uprawnienia SEP i pracuję zarówno z klientami indywidualnymi, jak i firmami.
-  </p>
-  <p>
-    Moją misją jest bezpieczeństwo i pełne zadowolenie klienta – dlatego stawiam na jakość,
-    terminowość i uczciwe ceny.
-  </p>
+<section id="profil" class="hidden">
+  <h2 id="name"></h2>
+  <p id="desc"></p>
+  <p><strong>Miasto:</strong> <span id="miasto"></span></p>
+  <p><strong>Województwo:</strong> <span id="wojewodztwo"></span></p>
+  <p><strong>Zakres prac:</strong> <span id="zajmuje"></span></p>
+  <p><strong>Telefon:</strong> <span id="telefon"></span></p>
+  <p><strong>Email:</strong> <span id="email"></span></p>
+  <div id="status" class="badge"></div>
 </section>
+
+<section id="brak" class="hidden">
+  <h3>Brak wyników</h3>
+  <p>Nie znaleziono elektryka o podanych danych.</p>
+</section>
+
+<script>
+const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co";
+const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8";
+
+const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+
+const searchInput = document.getElementById("search");
+const profil = document.getElementById("profil");
+const brak = document.getElementById("brak");
+
+searchInput.addEventListener("input", async () => {
+  const q = searchInput.value.trim();
+
+  if (q.length < 2) {
+    profil.classList.add("hidden");
+    brak.classList.add("hidden");
+    return;
+  }
+
+  const { data, error } = await supabase
+    .from("tabela_elektrykow")
+    .select("*")
+    .or(`imie.ilike.%${q}%,nazwisko.ilike.%${q}%`)
+    .limit(1)
+    .single();
+
+  if (error || !data) {
+    profil.classList.add("hidden");
+    brak.classList.remove("hidden");
+    return;
+  }
+
+  document.getElementById("name").textContent =
+    `${data.imie} ${data.nazwisko}`;
+
+  document.getElementById("desc").textContent =
+    `Profesjonalne usługi elektryczne – ${data.zajmujeSie || "brak opisu"}`;
+
+  document.getElementById("miasto").textContent = data.miasto || "-";
+  document.getElementById("wojewodztwo").textContent = data.wojewodztwo || "-";
+  document.getElementById("zajmuje").textContent = data.zajmujeSie || "-";
+  document.getElementById("telefon").textContent = data.telefon || "-";
+  document.getElementById("email").textContent = data.email || "-";
+
+  document.getElementById("status").textContent =
+    data.status === "✅" ? "Zweryfikowany" : "W trakcie weryfikacji";
+
+  brak.classList.add("hidden");
+  profil.classList.remove("hidden");
+});
+</script>
 
 </body>
 </html>
